# brainrouter

./: .env.example  .gitignore  CODEBASE_AUDIT.md  Cargo.toml  PRD.md  README.md  brainrouter.example.yaml
.cargo/: config.toml
configs/harness/: claude.sh  codex.toml  droid.json  omp-mcp.json  omp-models.yml  opencode.json  pi.md  vibe.toml
memory:/root/: memory_summary.md
src/: anthropic.rs  classifier.rs  config.rs  daemon.rs  health.rs  inference_state.rs  install.rs  lib.rs  main.rs  mcp_server.rs  peer_cwd.rs  prompt_rewriter.rs  ranker.rs  router.rs  routing_events.rs  server.rs  session.rs  stream.rs  types.rs
src/escalation/: mod.rs
src/escalation/templates/: dashboard.html  main_dashboard.html  session.html
src/provider/: anthropic.rs  embedded.rs  google.rs  mod.rs  openai.rs
src/review/: context.rs  mod.rs  prompt.rs  review_loop.rs
tests/: anthropic_shim_test.rs  failover_test.rs  install_test.rs  review_test.rs
